# Explorer_XMLA

./: .gitignore  AUTHORS  CREDITS  ChangeLog  LICENSE  Makefile.am  README  XMLAexplorer.html  XMLAexplorer.js  configure.ac  gen_version.sh  spasqlqb.html  spasqlqb.js  throbber.js  vad-sticker.xml  webdb_xmla_min.js  xmla_min.js
ample/: runtime.js
ample/languages/xhtml/: xhtml.js
ample/languages/xul/: xul.js
sql/: spasqlqb.sql
src/: date.js  webdb_xmla.js  xmla.js
www/: XMLAexplorer.html  spasqlqb.html  spasqlqb.js  spasqlqb.vsp  throbber.js  webdb_xmla_min.js  xmla_min.js
www/ample/: runtime-prod.js
